[package]
name = "assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bytes = "1.5.0"
cpal = "0.15.2"
hound = "3.5.1"
nnnoiseless = { version = "0.5.1", optional = true }
# openai = "1.0.0-alpha.13"
redis = { version = "0.24.0", features = ["tokio-comp"] }
reqwest = "0.11.23"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = []
denoise = ["dep:nnnoiseless"]


[[bin]]
path = "src/bin/feedback.rs"
name = "feedback"
